# visualizer

./: CMakeLists.txt  README.md  main.c
.github/: CODEOWNERS
external_scripts/: convert_to_wav.py  plot.py  write_file.py
lib/kissfft/: CMakeLists.txt
src/: main.c  main.h
src/prototypes/: CMakeLists.txt  aux_input.c  blink_led_transistor.c  fft_5_band.c  print_amplitude.c  pwm_led_mic.c  pwm_led_mic_transistor.c  pwm_led_transistor.c  visualizer_4_strip.c  visualizer_8_strip.c  visualizer_8_strip_aux.c  visualizer_landscape.c  ws2812_multi.c  ws2812_test.c
src/prototypes/include/prototypes/: aux_input.h  blink_led_transistor.h  fft_5_band.h  print_amplitude.h  pwm_led.h  pwm_led_mic_transistor.h  pwm_led_transistor.h  visualizer_4_strip.h  visualizer_8_strip.h  visualizer_8_strip_aux.h  visualizer_landscape.h  ws2812_multi.h  ws2812_test.h
src/utils/: CMakeLists.txt  aux_tools.c  blink_led_transistor.c  fft_5_band.c  fft_tools.c  led_tools.c  mic_tools.c  print_amplitude.c  pwm_led.c  pwm_led_mic.c  pwm_led_mic_transistor.c  pwm_led_transistor.c  sampling_tools.c  ws2812_test.c  ws2812_tools.c
src/utils/include/utils/: aux_tools.h  blink_led_transistor.h  fft_5_band.h  fft_tools.h  led_tools.h  mic_tools.h  pwm_led.h  pwm_led_mic_transistor.h  sampling_tools.h  ws2812_config.h  ws2812_tools.h
utils/: CMakeLists.txt  print_amplitude.c  pwm_led.c
